♻️ Refactor PedidoServiceMejorado and PromocionComboService for improved readability and performance
- Simplified the crearPedidoCompleto method in PedidoServiceMejorado by breaking down complex logic into smaller methods.
- Enhanced validation logic for promotions in validarPromociones method.
- Removed redundant comments and improved method naming for clarity.
- Streamlined the aplicarPromocionesSeleccionadas method in PromocionComboService to utilize streams for better performance.
- Consolidated promotion validation logic into a single method.
- Removed deprecated PromocionComboServiceNuevo class.
- Cleaned up imports and organized code structure in SucursalService.