@@ -10,11 +10,9 @@ import utn.saborcito.El_saborcito_back.mappers.PedidoMapper;
 import utn.saborcito.El_saborcito_back.models.*;
 import utn.saborcito.El_saborcito_back.repositories.*;
 
-import java.io.IOException;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -41,12 +39,12 @@ public class PedidoServiceMejorado {
     public PedidoDTO crearPedidoCompleto(PedidoCreacionDTO dto) {
         try {
             validarDatosCreacion(dto);
-
+            
             Pedido pedido = crearPedidoBase(dto);
             List<DetallePedido> detalles = crearDetallesPedido(pedido, dto.getDetalles());
-
+            
             aplicarPromociones(pedido, detalles, dto.getPromocionesSeleccionadas());
-
+            
             stockService.descontarStockPorPedido(pedido);
             calculadoraService.actualizarTotalesPedido(pedido);
             calcularTiempoEstimado(pedido);
@@ -62,12 +60,12 @@ public class PedidoServiceMejorado {
 
     public Map<String, Object> validarPromociones(List<Long> promocionIds) {
         Map<String, Object> resultado = new HashMap<>();
-
+        
         for (Long promocionId : promocionIds) {
             try {
                 Promocion promocion = promocionRepository.findById(promocionId)
                         .orElseThrow(() -> new RuntimeException("Promoción no encontrada: " + promocionId));
-
+                
                 resultado.put("promocion_" + promocionId, crearInfoValidacion(promocion));
             } catch (Exception e) {
                 Map<String, Object> error = new HashMap<>();
@@ -75,7 +73,7 @@ public class PedidoServiceMejorado {
                 resultado.put("promocion_" + promocionId, error);
             }
         }
-
+        
         return resultado;
     }
 
@@ -86,11 +84,8 @@ public class PedidoServiceMejorado {
         if (dto.getSucursalId() == null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "ID de la sucursal es obligatorio");
         }
-        if (dto.getDetalles() == null || dto.getDetalles().isEmpty()) {
-            if (dto.getPromocionesSeleccionadas() == null || dto.getPromocionesSeleccionadas().isEmpty()) {
-                throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
-                        "El pedido debe tener al menos un detalle o una promoción");
-            }
+        if (dto.getFormaPagoId() == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "ID de la forma de pago es obligatorio");
         }
     }
 
@@ -98,61 +93,52 @@ public class PedidoServiceMejorado {
         Pedido pedido = new Pedido();
         pedido.setFechaPedido(LocalDate.now());
         establecerReferencias(pedido, dto);
-
+        
         if (dto.getDomicilio() != null) {
             crearNuevoDomicilio(pedido.getCliente(), dto.getDomicilio());
         }
-
+        
         return pedido;
     }
 
     private void establecerReferencias(Pedido pedido, PedidoCreacionDTO dto) {
         Cliente cliente = clienteRepository.findById(dto.getClienteId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Cliente no encontrado"));
-
+        
         Sucursal sucursal = sucursalRepository.findById(dto.getSucursalId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Sucursal no encontrada"));
-
-        TipoEnvio tipoEnvio = tipoEnvioRepository.findById(dto.getTipoEnvioId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Tipo de envío no encontrado"));
-
+        
         FormaPago formaPago = formaPagoRepository.findById(dto.getFormaPagoId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Forma de pago no encontrada"));
 
-        Estado estado;
-        if (dto.getEstadoId() != null) {
-            estado = estadoRepository.findById(dto.getEstadoId())
-                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Estado no encontrado"));
-        } else {
-            estado = estadoRepository.findByNombre("PENDIENTE")
-                    .orElseThrow(
-                            () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Estado PENDIENTE no encontrado"));
-        }
+        Estado estadoPendiente = estadoRepository.findByNombre("PENDIENTE")
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Estado PENDIENTE no encontrado"));
+
+        TipoEnvio tipoEnvio = tipoEnvioRepository.findByNombre("TAKE_AWAY")
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Tipo de envío TAKE_AWAY no encontrado"));
 
         pedido.setCliente(cliente);
         pedido.setSucursal(sucursal);
-        pedido.setTipoEnvio(tipoEnvio);
         pedido.setFormaPago(formaPago);
-        pedido.setEstado(estado);
+        pedido.setEstado(estadoPendiente);
+        pedido.setTipoEnvio(tipoEnvio);
     }
 
     private void crearNuevoDomicilio(Cliente cliente, PedidoCreacionDTO.DomicilioCreacionDTO domicilioDTO) {
         Localidad localidad = localidadRepository.findById(domicilioDTO.getLocalidadId())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Localidad no encontrada"));
 
-        Domicilio domicilio = new Domicilio();
-        domicilio.setCalle(domicilioDTO.getCalle());
-        domicilio.setNumero(domicilioDTO.getNumero());
-        domicilio.setCp(domicilioDTO.getCp());
-        domicilio.setLatitud(domicilioDTO.getLatitud());
-        domicilio.setLongitud(domicilioDTO.getLongitud());
-        domicilio.setLocalidad(localidad);
+        Domicilio domicilio = Domicilio.builder()
+                .calle(domicilioDTO.getCalle())
+                .numero(domicilioDTO.getNumero())
+                .cp(domicilioDTO.getCp())
+                .latitud(domicilioDTO.getLatitud())
+                .longitud(domicilioDTO.getLongitud())
+                .localidad(localidad)
+                .build();
 
-        Usuario usuario = usuarioRepository.findById(cliente.getId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
-                        "Usuario no encontrado para el cliente"));
-
-        domicilio.setUsuario(usuario);
+        Usuario usuario = usuarioRepository.findByCliente_Id(cliente.getId())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuario no encontrado"));
 
         if (usuario.getDomicilios() == null) {
             usuario.setDomicilios(new ArrayList<>());
@@ -163,38 +149,38 @@ public class PedidoServiceMejorado {
         usuarioRepository.save(usuario);
     }
 
-    private List<DetallePedido> crearDetallesPedido(Pedido pedido,
-            List<PedidoCreacionDTO.DetallePedidoCreacionDTO> detallesDTO) {
+    private List<DetallePedido> crearDetallesPedido(Pedido pedido, List<PedidoCreacionDTO.DetallePedidoCreacionDTO> detallesDTO) {
         if (detallesDTO == null || detallesDTO.isEmpty()) {
             return new ArrayList<>();
         }
 
         return detallesDTO.stream().map(dto -> {
-            DetallePedido detalle = new DetallePedido();
-            detalle.setCantidad(dto.getCantidad());
-            detalle.setCantidadSinPromocion(dto.getCantidad());
-            detalle.setCantidadConPromocion(0);
-            detalle.setPedido(pedido);
-
             Articulo articulo = articuloValidacionService.buscarYValidarArticulo(dto.getArticuloId());
+            
+            validarStockArticulo(articulo, dto.getCantidad());
 
-            if (articuloValidacionService.esArticuloInsumo(articulo)) {
-                ArticuloInsumo insumo = (ArticuloInsumo) articulo;
-                articuloValidacionService.validarStockInsumo(insumo, dto.getCantidad());
-            } else if (articuloValidacionService.esArticuloManufacturado(articulo)) {
-                ArticuloManufacturado manufacturado = (ArticuloManufacturado) articulo;
-                articuloValidacionService.validarStockManufacturado(manufacturado, dto.getCantidad());
-            }
+            DetallePedido detalle = DetallePedido.builder()
+                    .cantidad(dto.getCantidad())
+                    .cantidadSinPromocion(dto.getCantidad())
+                    .cantidadConPromocion(0)
+                    .pedido(pedido)
+                    .articulo(articulo)
+                    .build();
 
-            detalle.setArticulo(articulo);
             detalle.calcularYEstablecerSubtotal();
-
             return detalle;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    private void aplicarPromociones(Pedido pedido, List<DetallePedido> detalles,
-            List<PromocionSeleccionadaDTO> promocionesSeleccionadas) {
+    private void validarStockArticulo(Articulo articulo, int cantidad) {
+        if (articuloValidacionService.esArticuloInsumo(articulo)) {
+            articuloValidacionService.validarStockInsumo((ArticuloInsumo) articulo, cantidad);
+        } else if (articuloValidacionService.esArticuloManufacturado(articulo)) {
+            articuloValidacionService.validarStockManufacturado((ArticuloManufacturado) articulo, cantidad);
+        }
+    }
+
+    private void aplicarPromociones(Pedido pedido, List<DetallePedido> detalles, List<PromocionSeleccionadaDTO> promocionesSeleccionadas) {
         if (promocionesSeleccionadas != null && !promocionesSeleccionadas.isEmpty()) {
             List<DetallePedidoPromocion> promociones = promocionComboService.aplicarPromocionesSeleccionadas(
                     pedido, detalles, promocionesSeleccionadas, pedido.getSucursal());
@@ -231,7 +217,7 @@ public class PedidoServiceMejorado {
             facturaDTO.setFormaPago(formaPagoRef);
 
             facturaService.save(facturaDTO);
-        } catch (IOException e) {
+        } catch (Exception e) {
             System.err.println("Error al generar factura: " + e.getMessage());
         }
     }
@@ -239,12 +225,11 @@ public class PedidoServiceMejorado {
     private Map<String, Object> crearInfoValidacion(Promocion promocion) {
         LocalDate fechaActual = LocalDate.now();
         LocalTime horaActual = LocalTime.now();
-
-        boolean fechaValida = !promocion.getFechaDesde().isAfter(fechaActual)
-                && !promocion.getFechaHasta().isBefore(fechaActual);
+        
+        boolean fechaValida = !promocion.getFechaDesde().isAfter(fechaActual) && !promocion.getFechaHasta().isBefore(fechaActual);
         boolean horarioValido = promocion.getHoraDesde() == null || promocion.getHoraHasta() == null ||
                 (!horaActual.isBefore(promocion.getHoraDesde()) && !horaActual.isAfter(promocion.getHoraHasta()));
-
+        
         Map<String, Object> info = new HashMap<>();
         info.put("denominacion", promocion.getDenominacion());
         info.put("fechaDesde", promocion.getFechaDesde());
@@ -256,7 +241,7 @@ public class PedidoServiceMejorado {
         info.put("fechaValida", fechaValida);
         info.put("horarioValido", horarioValido);
         info.put("vigente", fechaValida && horarioValido);
-
+        
         return info;
     }
 }
